--- a/loginres.css
+++ b/loginres.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/frontend/imagenes/backiee-179984.jpg);
+    background-image: url(https://fotografias.lasexta.com/clipping/cmsimages02/2023/06/12/2D1E1A88-3CCB-4EF5-BFAC-65A34B6706F3/fondos-pantalla-clasicos-windows-calidad_98.jpg?crop=1300,731,x0,y0&width=1900&height=1069&optimize=high&format=webply);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
